Feature/typeuser (#44)
* Construindo CRUD do Tipo de usuario

* Ajustando nomeclaturas

* Ajustando Response DTO com ID

* Ajustando pastas phase-two

* Retirando o TypeEnum

* Retirando o TypeEnum dos testes existentes

* Adicionando testes unitarios

* Corrigindo alguns pontos que quebram

* Corrigindo mapeamento do Type User no saveUser e updateUser

* Adicionando o CRUD TypeUser na collection

* Corrigindo erro ortografico

* Resolvendo conflitos de testes de insomnia

* Adicionando documentacao padronizado da API

* feat: arrumando o testes unitarios

* Adicionando collections do TypeUser

---------

Co-authored-by: Janaina de Fatima Ramos Vasconcelos <janaina.vasconcelos1@ibm.com>