@@ -1,15 +1,15 @@
 package com.br.fiap.fortaleza.sabor.infrastructure.mapper;
 
 import com.br.fiap.fortaleza.sabor.domain.address.Address;
-import com.br.fiap.fortaleza.sabor.domain.enums.TypeEnum;
+import com.br.fiap.fortaleza.sabor.domain.typeUser.TypeUser;
 import com.br.fiap.fortaleza.sabor.domain.user.User;
 import com.br.fiap.fortaleza.sabor.infrastructure.controller.dto.request.AddressDto;
 import com.br.fiap.fortaleza.sabor.infrastructure.controller.dto.request.UpdateRequestDto;
 import com.br.fiap.fortaleza.sabor.infrastructure.controller.dto.request.UserRequestDto;
 import com.br.fiap.fortaleza.sabor.infrastructure.controller.dto.response.UserResponseDto;
+import com.br.fiap.fortaleza.sabor.infrastructure.persistence.typeUser.TypeUserEntity;
 import com.br.fiap.fortaleza.sabor.infrastructure.persistence.user.AddressEntity;
 import com.br.fiap.fortaleza.sabor.infrastructure.persistence.user.UserEntity;
-import com.br.fiap.fortaleza.sabor.infrastructure.persistence.enums.TypeEntityEnum;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -21,23 +21,28 @@ import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class UserEntityMapperTest {
 
     private UserEntityMapper mapper;
 
+    private TypeUserEntityMapper typeMapper;
+
     @BeforeEach
     void setUp() {
-        mapper = new UserEntityMapper();
+        mapper = new UserEntityMapper(typeMapper);
     }
 
     @Test
     @DisplayName("Should map UserRequestDto to User.")
     void shouldMapUserRequestDtoToUser() {
+        TypeUser typeUser = new TypeUser("DONO");
         UserRequestDto dto = new UserRequestDto(
                 "Nome Teste", "email@test.com", "loginTeste", "senha",
-                LocalDate.of(2025, 5, 21), TypeEnum.DONO,
+                LocalDate.of(2025, 5, 21), typeUser,
                 List.of(new AddressDto("Rua A", "Bairro B", "Comp", 10, "Cidade C", "Estado E", "03565000"))
         );
 
@@ -45,15 +50,16 @@ class UserEntityMapperTest {
 
         assertNotNull(user);
         assertEquals("Nome Teste", user.getNome());
-        assertEquals(TypeEnum.DONO, user.getTipo());
+        assertEquals(typeUser, user.getTipo());
         assertEquals("Rua A", user.getAddress().getFirst().getRua());
     }
 
     @Test
     @DisplayName("Should map UpdateRequestDto to User.")
     void shouldMapUpdateRequestDtoToUser() {
+        TypeUser typeUser = new TypeUser("CLIENTE");
         UpdateRequestDto dto = new UpdateRequestDto(
-                "Nome Update", "update@email.com", "novaSenha", TypeEnum.CLIENTE,
+                "Nome Update", "update@email.com", "novaSenha", typeUser,
                 List.of(new AddressDto("Rua Z", "Bairro X", "Ap 101", 50, "Cidade Y", "Estado Z", "03565000"))
         );
 
@@ -63,53 +69,56 @@ class UserEntityMapperTest {
         assertEquals("Nome Update", user.getNome());
         assertEquals("update@email.com", user.getEmail());
         assertEquals("novaSenha", user.getSenha());
-        assertEquals(TypeEnum.CLIENTE, user.getTipo());
+        assertEquals(typeUser, user.getTipo());
     }
 
     @Test
-    @DisplayName("Should map User to UserEntity")
+    @DisplayName("Should map User to UserEntity.")
     void shouldMapUserToUserEntity() {
-        Address address = new Address("Rua B", "Bairro C", "Comp", 99, "Estado F", "Cidade D", "03565000");
-        User user = new User("Nome", "email", "login", "senha", LocalDate.now(), TypeEnum.DONO, List.of(address));
+        // Arrange
+        TypeUserEntityMapper typeMapper = mock(TypeUserEntityMapper.class);
+        UserEntityMapper mapper = new UserEntityMapper(typeMapper); // injetando dependência
 
+        TypeUser typeUser = new TypeUser("DONO");
+        TypeUserEntity typeUserEntity = new TypeUserEntity("DONO");
+
+        when(typeMapper.toTypeUserEntity(typeUser)).thenReturn(typeUserEntity); // comportamento simulado
+
+        Address address = new Address("Rua Teste", "Bairro", "Comp", 42, "Estado", "Cidade", "00000000");
+        User user = new User("Maria", "maria@test.com", "maria123", "senha", LocalDate.of(2020, 1, 1), typeUser, List.of(address));
+
+        // Act
         UserEntity entity = mapper.toUserEntity(user);
 
-        assertEquals(user.getNome(), entity.getNome());
-        assertEquals(TypeEntityEnum.DONO, entity.getTipo());
-        assertEquals("Rua B", entity.getEnderecos().getFirst().getRua());
-    }
-
-    @Test
-    @DisplayName("Should map UserEntity to User.")
-    void shouldMapUserEntityToUser() {
-        AddressEntity address = new AddressEntity("Rua 1", "Bairro 2", "Comp", 1, "Estado", "Cidade", "03565000");
-        UserEntity entity = new UserEntity(1L, "João", "joao@email.com", "joao123", "123", LocalDate.now(), TypeEntityEnum.CLIENTE, List.of(address));
-
-        User user = mapper.toUserDomain(entity);
-
-        assertEquals("João", user.getNome());
-        assertEquals(TypeEnum.CLIENTE, user.getTipo());
-        assertEquals("Rua 1", user.getAddress().getFirst().getRua());
+        // Assert
+        assertEquals("Maria", entity.getNome());
+        assertEquals("maria@test.com", entity.getEmail());
+        assertEquals("maria123", entity.getLogin());
+        assertEquals("senha", entity.getSenha());
+        assertEquals(typeUserEntity.getType(), entity.getTipo().getType());
+        assertEquals("Rua Teste", entity.getEnderecos().get(0).getRua());
     }
 
     @Test
     @DisplayName("Should map User to UserResponseDto")
     void shouldMapUserToUserResponseDto() {
+        TypeUser typeUser = new TypeUser("CLIENTE");
         Address address = new Address("Rua R", "Bairro B", "Comp", 10, "Estado", "Cidade", "03565000");
-        User user = new User("Maria", "maria@email.com", "maria123", "123", LocalDate.now(), TypeEnum.CLIENTE, List.of(address));
+        User user = new User("Maria", "maria@email.com", "maria123", "123", LocalDate.now(), typeUser, List.of(address));
 
         UserResponseDto dto = mapper.toUserResponseDto(user);
 
         assertEquals("Maria", dto.nome());
-        assertEquals(TypeEnum.CLIENTE, dto.tipo());
+        assertEquals(typeUser, dto.tipo());
         assertEquals("Rua R", dto.address().getFirst().rua());
     }
 
     @Test
     @DisplayName("Should map optional User to UserResponseDto.")
     void shouldMapOptionalUserToUserResponseDto() {
+        TypeUser typeUser = new TypeUser("DONO");
         Address address = new Address("Rua Q", "Bairro C", "Comp", 1, "Estado", "Cidade", "03565000");
-        User user = new User("Carlos", "carlos@email.com", "carlos123", "123", LocalDate.now(), TypeEnum.DONO, List.of(address));
+        User user = new User("Carlos", "carlos@email.com", "carlos123", "123", LocalDate.now(), typeUser, List.of(address));
 
         UserResponseDto dto = mapper.getUserByIdToUserResponseDto(Optional.of(user));
 
